--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omanwheels-cargo-directory",
+  "name": "cargo-app-omawheels",
   "private": true,
   "version": "0.0.0",
   "type": "module",
